# bu-ec530-health-monitoring

./: .dockerignore  Dockerfile  README.md  compose.yaml  config.py  main.py  pyproject.toml  requirements.txt  run.py
.github/workflows/: python-app.yml
data/: database.db  sql_table_schemas
src/: CONFIG.py  app.py  client.py  database.db  main.py  run.py
src/archive/: old_main.py
src/test/: test_sanitizer.py
src/utils/: __init__.py  admin.py  dataset.py  device.py  devices.py  identity.py  logger.py  organization.py  patient.py  provider.py  test_users.py  users.py
src/utils/misc/: sanitizer.py
webapp/: Dockerfile  package-lock.json  package.json
webapp/src/: App.js
webapp/src/components/: App.js  UserList.js
