[tool.poetry]
name = "bu-ec530-health-monitoring"
version = "0.2.0"
license = "GNU"
description = "Simple app for BU EC530 project."
authors = ["Chris Krenz <ckrenz@bu.edu>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
aniso8601 = "9.0.1"
blinker = "1.7.0"
certifi = "2024.2.2"
charset-normalizer = "3.3.2"
click = "8.1.7"
exceptiongroup = "1.2.0"
flask = "3.0.2"
Flask-RESTful = "0.3.10"
flask-sqlalchemy = "3.1.1"
idna = "3.6"
iniconfig = "2.0.0"
itsdangerous = "2.1.2"
Jinja2 = "3.1.3"
MarkupSafe = "2.1.5"
numpy = "1.26.4"
packaging = "24.0"
pandas = "2.2.1"
pluggy = "1.4.0"
pytest = "8.1.1"
python-dateutil = "2.9.0.post0"
pytz = "2024.1"
requests = "2.31.0"
six = "1.16.0"
SQLAlchemy = "2.0.29"
tomli = "2.0.1"
typing-extensions = "4.10.0"
tzdata = "2024.1"
urllib3 = "2.2.1"
werkzeug = "3.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
