[tool.poetry]
name = "bu-ec530-health-monitoring"
version = "0.2.0"
description = "Simple app for BU EC530 project."
authors = ["chris-krenz <chris.dean.krenz@gmail.com>"]
license = "GNU"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pytest = "^8.2.0"
numpy = "^1.26.4"
requests = "^2.31.0"
pandas = "^2.2.2"
flask = "^3.0.3"
flask-cors = "^4.0.1"
flask-restx = "^1.3.0"
flask-sqlalchemy = "^3.1.1"
flask-bcrypt = "^1.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
